# fcpy

./: LICENSE  README.md  requirements.txt  setup.cfg
src/: fc.py  install.jl  juliapkg.json  setup.jl
