[metadata]
name = fcpy
version = 0.0.1
author = Qingyu Qu
author_email = author@example.com
description = High performance fractional calculus computing in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SciFracX/fcpy
project_urls =
    Bug Tracker = https://github.com/SciFracX/fcpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src